# drug-shortage-data-pipeline

./: .gitignore  Dockerfile.airflow  Dockerfile.python  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: drug_shortage_pipeline_dag.py
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_drug_category.sql  fact_drug_shortage.sql  schema.yml
dbt/models/staging/: sources.yml  stg_drug_shortage.sql
src/: extract.py  load.py
terraform/: .gitignore  .terraform.lock.hcl  main.tf  providers.tf  variables.tf
