[project]
name = "drug-shortage-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-storage>=3.9.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.0",
]
