[project]
name = "drug-shortage-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.8",
    "dotenv>=0.9.9",
    "google-cloud-storage>=2.4,<3.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.0",
]
